--- a/index.html
+++ b/index.html
@@ -8,25 +8,36 @@
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <div class="container">
+    <div class="card card-1">
+      <img src="images/icon-sedans.svg" alt="sedan">
+      <h1 class="card-title">Sedans</h1>
+      <p class="card-content">
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.
+      </p>
+    </div>
+    <div class="card card-2">
+      <img src="images/icon-suvs.svg" alt="suv">
+      <h1 class="card-title">SUVs</h1>
+      <p class="card-content">
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.
+      </p>
+    </div>
+    <div class="card card-3"><p></p>
+      <img src="images/icon-luxury.svg" alt="luxury">
+      <h1 class="card-title">Luxury</h1>
+      <p class="card-content">
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.
+      </p>
+    </div>
+  </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
