--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
+      <button class="button button-1">Learn More</button>
     </div>
     <div class="card card-2">
       <img src="images/icon-suvs.svg" alt="suv">
@@ -27,21 +28,23 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
       </p>
+      <button class="button button-2">Learn More</button>
     </div>
-    <div class="card card-3"><p></p>
+    <div class="card card-3">
       <img src="images/icon-luxury.svg" alt="luxury">
       <h1 class="card-title">Luxury</h1>
       <p class="card-content">
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
       </p>
+      <button class="button button-3">Learn More</button>
     </div>
   </div>
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Charlie025x">Charlie Alonso</a>.
   </div>
 </body>
 </html>
